fix hero alignment mobile

--- a/FEE/assets/styles/styles.css
+++ b/FEE/assets/styles/styles.css
@@ -2586,4 +2586,10 @@ twitter-widget.hidden-tweet{
     width: 100%;
     padding-left: 0;
   }
+  .hero .overlay{
+    position: relative;
+    padding: 30px 0;
+    display: block;
+    min-height: 380px;
+  }
 }
